tests/baselines/reference/publicMemberImplementedAsPrivateInDerivedClass.errors.txt
tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts(4,7): error TS2421: Class 'Foo' incorrectly implements interface 'Qux':
  Private property 'Bar' cannot be reimplemented.


==== tests/cases/compiler/publicMemberImplementedAsPrivateInDerivedClass.ts (1 errors) ====
    interface Qux {
     Bar: number;
    }
    class Foo implements Qux {
          ~~~
!!! error TS2421: Class 'Foo' incorrectly implements interface 'Qux':
!!! error TS2421:   Private property 'Bar' cannot be reimplemented.
     private Bar: number;
    }
    